<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">



    <!-- Main content in CoordinatorLayout -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ExtraText">

        <!-- Toolbar -->
        <include
            android:id="@+id/app_bar_main"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- ConstraintLayout for Button and other central elements -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Fragment Container as top-level overlay for MediaPlayerFragment -->
        <FrameLayout
            android:id="@+id/fragment_MediaPlayerFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:elevation="10dp" />  <!-- Ensure it's layered above other views -->

        <!-- Fragment container for NavController -->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment_content_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:navGraph="@navigation/mobile_navigation" /> <!-- Link to your nav graph -->


        <!-- Bottom Navigation Bar -->

        <com.google.android.material.bottomnavigation.BottomNavigationView

            android:id="@+id/bottomNavView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:menu="@menu/bottom_nav_menu"
            app:itemTextAppearanceActive="@style/regular_font_12"
            app:itemTextAppearanceInactive="@style/regular_font_12"/>

        <!-- Mini player view -->
        <include
            layout="@layout/mini_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="60dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <!-- Navigation Drawer -->


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:itemTextAppearance="@style/regular_font_14"
        app:menu="@menu/activity_main_drawer" />



    <include layout="@layout/mini_player_view" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:id="@+id/linLayout"
        android:layout_height="match_parent"
        android:background="#000000"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:textAlignment="center"
            android:text="Please enter email and password"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp" />

        <!-- Logo ImageView at the top center -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:src="@mipmap/loopify_logo_round" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/pptelegraf_ultrabold"
            android:text="Loopify"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <!-- Top zone for email/password login -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- Display Name Field -->

            <!-- Email Field -->
            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="12dp"
                android:background="#FFFFFF"
                android:backgroundTint="#000000"
                android:elevation="2dp"
                android:fontFamily="@font/pptelegraf_regular"
                android:hint="@string/account_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#333333"
                android:textColorHint="#B0BEC5" />

            <!-- Password Field -->
            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="24dp"
                android:background="#FFFFFF"
                android:backgroundTint="#000000"
                android:elevation="2dp"
                android:fontFamily="@font/pptelegraf_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#333333"
                android:textColorHint="#B0BEC5" />

            <!-- Login Button -->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#c144d6"
                android:elevation="2dp"
                android:fontFamily="@font/pptelegraf_regular"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <!-- Sign-Up Button -->
            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="#C181D6"
                android:elevation="2dp"
                android:fontFamily="@font/pptelegraf_regular"
                android:text="Sign Up"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Divider line with text in the center -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#B0BEC5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="sans-serif-light"
                android:text=" or "
                android:textColor="#B0BEC5" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#B0BEC5" />
        </LinearLayout>

        <!-- Google Sign-In Button Zone -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:gravity="center"> <!-- Margin to lift the button from the bottom -->

            <!--        <com.google.android.gms.common.SignInButton-->
            <!--            android:id="@+id/googleSignInButton"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="50dp"-->
            <!--            android:backgroundTint="#c144d6"-->
            <!--            android:textColor="#FFFFFF"-->
            <!--            android:layout_marginTop="8dp" />-->

            <Button
                android:id="@+id/googleSignInButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#ffffff"
                android:drawableLeft="@drawable/google_icon"
                android:fontFamily="@font/pptelegraf_regular"
                android:text="Sign in with Google"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>

