<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_svgrepo_com_1_"
        android:title="@string/menu_home"
        />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/magnifer_svgrepo_com_1_"
        android:title="@string/search"
        />

    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/bookmark_square_minimalistic_svgrepo_com_1_"
        android:title="@string/your_library"
        />
</menu>